# LobstaChat

./: .gitignore  README.md  build.gradle.kts  keystore.jks  settings.gradle.kts  setup_android_env.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/roblobsta/lobstachat/: LobstaChatApplication.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/roblobsta/lobstachat/data/: AppDB.kt  ChatsDB.kt  InferenceParamsData.kt  PersonasDB.kt  SettingsRepository.kt
app/src/main/java/com/roblobsta/lobstachat/di/: AppModule.kt
app/src/main/java/com/roblobsta/lobstachat/llm/: DeviceSpecProvider.kt  ExampleModelsList.kt  LobstaLMManager.kt
app/src/main/java/com/roblobsta/lobstachat/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
lobstachat-data/: build.gradle.kts
lobstachat-data/src/main/java/com/roblobsta/lobstachat/data/: AppDB.kt  Converters.kt
lobstachat-data/src/main/java/com/roblobsta/lobstachat/data/daos/: ChatDao.kt  ChatMessageDao.kt  FolderDao.kt  LLMModelDao.kt  PersonaDao.kt  SettingsDao.kt  TaskDao.kt
lobstachat-data/src/main/java/com/roblobsta/lobstachat/data/di/: DataModule.kt
lobstachat-data/src/main/java/com/roblobsta/lobstachat/data/models/: Chat.kt  ChatMessage.kt  Folder.kt  InferenceParams.kt  LLMModel.kt  Persona.kt  Settings.kt  Task.kt
lobstachat-data/src/main/java/com/roblobsta/lobstachat/data/repositories/: ChatRepository.kt  (+5 more)
lobstachat-data/src/main/java/com/roblobsta/lobstachat/lm/: InferenceParams.kt
lobstachat-hf-api/: build.gradle.kts
lobstachat-lm/: build.gradle.kts
lobstachat-lm/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  lobstachatlm.cpp
lobstachat-lm/src/main/java/com/roblobsta/lobstachat/lm/: LobstaChatLM.kt
(+12 files in other folders)
